--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,5 +1,5 @@
-<ion-view title="Home">
-	<ion-content has-header="true" padding="true">
-	Hello World!!!
+<ion-view title="New session">
+	<ion-content class="center-child" has-header="true" padding="true">
+		<play-stop-button class="play-button" click-handler="recording"></play-stop-button>
 	</ion-content>
 </ion-view>
